compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__bit_array_segment_type_does_not_allow_unit_codepoint_utf16.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 120
expression: "let x = <<1:utf16_codepoint-unit(5)>> x"
---
----- SOURCE CODE
let x = <<1:utf16_codepoint-unit(5)>> x

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.rakun:1:13
  │
1 │ let x = <<1:utf16_codepoint-unit(5)>> x
  │             ^^^^^^^^^^^^^^^ Unit cannot be specified here

Hint: utf16_codepoint segments are sized based on their value and cannot
have a unit.
See: https://tour.rakun.run/data-types/bit-arrays/
